<package format="2">

  <name>libseek-thermal</name>
  <version>0.0.1</version>
  <description>seek_thermal</description>
  <maintainer email="gabriel.huettenberger@gmail.com">Gabriel Huettenberger</maintainer>

  <license>BSD</license>


  <author>Gabriel Huettenberger</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>camera_info_manager</depend>

  <!-- Dependencies needed after this package is compiled. -->


  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>camera_info_manager</test_depend> -->
  <!-- <test_depend>thermaleye_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>
