<package format="2">

  <name>libseek-thermal</name>
  <version>0.0.1</version>
  <description>seek_thermal</description>
  <maintainer email="gabriel.huettenberger@gmail.com">Gabriel Huettenberger</maintainer>

  <license>BSD</license>


  <author>Gabriel Huettenberger</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
