<package format="2">

  <name>libseek-thermal</name>
  <version>0.0.1</version>
  <description>seek_thermal</description>
  <maintainer email="jonathan.lichtenfeld@gmail.com">Jonathan Lichtenfeld</maintainer>

  <license>BSD</license>

  <author>Gabriel Huettenberger</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->  
  <depend>rclcpp</depend>  
  <build_depend>rclcpp_components</build_depend>
  <depend>cv_bridge</depend>  
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <ament_export_plugin_macro file="${prefix}/nodelet_plugins.xml" />      
    <build_type>ament_cmake</build_type>  
  </export>

</package>
